--- a/index.html
+++ b/index.html
@@ -432,16 +432,16 @@
                     </div>
                     
                     <div class="right-contact">
-                        <form action="https://formsubmit.co/cmarabcinq@gmail.com" method="POST" class="contact-form">
+                        <form class="contact-form" action="https://formsubmit.co/cmarabcinq@gmail.com" method="POST">
                             <div class="input-control i-c-2">
-                                <input type="text" name="texte" required placeholder="YOUR NAME">
-                                <input type="email" name="courriel" required placeholder="YOUR EMAIL">
+                                <input type="text" name="texte" placeholder="YOUR NAME" required>
+                                <input type="email" name="courriel" placeholder="YOUR EMAIL" required>
                             </div>
                             <div class="input-control">
-                                <input type="text" name="sujet" required placeholder="ENTER SUBJECT">
+                                <input type="text" name="sujet" placeholder="ENTER SUBJECT" required>
                             </div>
                             <div class="input-control">
-                                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
+                                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..." required></textarea>
                             </div>
                             <div class="submit-btn">
                                 <a href='pages\thankyou.html' target="_blank" class="main-btn">
