--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                      Email :
                                  </div>
                                  <p>
-                                    nordineaqad@gmail.com
+                                    naqad@gmail.com
                                  </p>
                              </div>
                              <div class="contact-item">
@@ -409,7 +409,7 @@
                              <div class="contact-item">
                                  <div class="icon">
                                      <i class="fa-solid fa-earth-europe"></i>
-                                     Languages :
+                                     I speak :
                                  </div>
                                  <p>
                                     Arabic, English, French
