Update mail addr

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                      Email :
                                  </div>
                                  <p>
-                                    naqad@gmail.com
+                                    naqad@proton.me
                                  </p>
                              </div>
                              <div class="contact-item">
