Update index.html hiding mailtype

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                      Email :
                                  </div>
                                  <p>
-                                    naqad@proton.me
+                                    naqad[at]proton.me
                                  </p>
                              </div>
                              <div class="contact-item">
