--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="right-header">
                 <div class="picture">
-                    <img src="img/pro1.png" alt="">
+                    <img src="img/pro11.png" alt="">
                 </div>
                 <h1 class="name">
                     Bonjour, je suis <span> Noureddine Aqad. </span> 
@@ -50,13 +50,13 @@
     <main>
         <section class="section sec2 about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+                <h2>About <span>me</span><span class="bg-text">metrics</span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
                     <h4>Information about me :</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                        IT passionate, interested and invested in all IT subjects : networking, programming and data science. 
                     </p>
                     <div class="btn-con">
                         <a href="https://drive.google.com/file/d/1K4Ort9D2eyxpewtoyVaoIjRoSwhEUewf/view?usp=share_link" target="_blank" class="main-btn">
@@ -361,7 +361,7 @@
         <section class="section sec5" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span>Me</span><span class="bg-text">PERSONAL</span></h2>
+                    <h2>Contact<span>Me</span><span class="bg-text">PERSONAL</span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
