--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -1,15 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>
-        Thanks a lot for submitting your request !
-        Have a nice day !
-    </h1>
-</body>
-</html>
+<title>Merci</title>
+    <link rel="stylesheet" href="stylez/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet"> 
+<div style="text-align:center;">
+	<h1>Thank you!</h1>
+	<p>Your submission has been received.</p>
+	<p>This page will redirect in <span id="timer"></span>s.</p>
+</div>
+<script type="text/javascript">
+	var count = 5;
+	var redirect = "https://noureddineaqad.github.io/";
+	
+	function countDown() {
+		if(count >= 0){
+			document.getElementById("timer").innerHTML = count--;
+			setTimeout("countDown()", 1000);
+		}else{
+			window.location.href = redirect;
+		}
+	}
+	countDown();
+</script>
