--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     </div>
                     
                     <div class="right-contact">
-                        <form class="contact-form" action="https://formsubmit.co/cmarabcinq@gmail.com" method="POST">
+                        <form action="https://formsubmit.co/cmarabcinq@gmail.com" method="POST">
                             <div class="input-control i-c-2">
                                 <input type="text" name="texte" placeholder="YOUR NAME" required>
                                 <input type="email" name="courriel" placeholder="YOUR EMAIL" required>
