--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     </div>
                     
                     <div class="right-contact">
-                        <form class="contact-form" action="https://formsubmit.co/nordin.aqad@live.fr" method="POST">
+                        <form class="contact-form" action="https://formsubmit.co/66f965c4cd75e908f37adcb2a3a81de7" method="POST">
                             <div class="input-control i-c-2">
                                 <input type="text" name="texte" placeholder="YOUR NAME" required>
                                 <input type="email" name="courriel" placeholder="YOUR EMAIL" required>
@@ -444,7 +444,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..." required></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href='pages\thankyou.html' class="main-btn">
+                                <a href='https://formsubmit.co/66f965c4cd75e908f37adcb2a3a81de7' class="main-btn">
                                     <span class="btn-text">SUBMIT</span>
                                     <i class="fa-regular fa-circle-check"></i>    
                                 </a>
