--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..." required></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href='https://formsubmit.co/66f965c4cd75e908f37adcb2a3a81de7' class="main-btn">
+                                <a href='#' class="main-btn">
                                     <span class="btn-text">SUBMIT</span>
                                     <i class="fa-regular fa-circle-check"></i>    
                                 </a>
