--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     </div>
                     
                     <div class="right-contact">
-                        <form class="contact-form" action="https://formsubmit.co/66f965c4cd75e908f37adcb2a3a81de7" method="POST">
+                        <form class="contact-form" action="https://getform.io/f/6839b9ff-6ee3-4edf-9b0e-f4a1fd2e82ee" method="POST">
                             <div class="input-control i-c-2">
                                 <input type="text" name="texte" placeholder="YOUR NAME" required>
                                 <input type="email" name="courriel" placeholder="YOUR EMAIL" required>
