--- a/index.html
+++ b/index.html
@@ -443,9 +443,10 @@
                             <div class="input-control">
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..." required></textarea>
                             </div>
+                            <button type="submit">Send</button>
                             <div class="submit-btn">
-                                <a href='https://getform.io/thank-you' class="main-btn">
-                                    <span class="btn-text">SUBMIT</span>
+                                <a href='https://drive.google.com/file/d/1K4Ort9D2eyxpewtoyVaoIjRoSwhEUewf/view?usp=share_link' target="_blank" class="main-btn">
+                                    <span class="btn-text">MY CV</span>
                                     <i class="fa-regular fa-circle-check"></i>    
                                 </a>
                             </div>
