last edit 230121 nothing left to do Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                             <button type="submit">Send</button>
                             <div class="submit-btn">
                                 <a href='https://drive.google.com/file/d/1K4Ort9D2eyxpewtoyVaoIjRoSwhEUewf/view?usp=share_link' target="_blank" class="main-btn">
-                                    <span class="btn-text">MY CV</span>
+                                    <span class="btn-text">Download CV</span>
                                     <i class="fa-regular fa-circle-check"></i>    
                                 </a>
                             </div>
