--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                                      Je parle :
                                  </div>
                                  <p>
-                                    Arabe, Anglais, Français
+                                    Arabe & Anglais (C2)
                                  </p>
                              </div>
                          </div>
