--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </h1>
                 <p>
                     Je prépare le Brevet de Technicien Supérieur
-                    aux Services Informatiques aux Organisations (SIO)
-                    option SISR.
+                    spécialisé en Services Informatiques aux Organisations
+                    (SIO-SISR).
                 </p> 
                 
 
