--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </h1>
                 <p>
                     Je prépare le Brevet de Technicien Supérieur
-                    spécialisé en Services Informatiques aux Organisations
+                    spécialisé dans les Services Informatiques aux Organisations
                     (SIO-SISR).
                 </p> 
                 
