--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Etudiant en informatique de réseaux.
                 </h1>
                 <p>
-                    Je prépare le Brevet de Technicien Supérieur
+                    Je prépare le Brevet de Technicien Supérieur -- BTS --
                     spécialisé dans les Services Informatiques aux Organisations
                     (SIO-SISR).
                 </p> 
