--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
                             </h4>
                             <p>
                                 Commencez par étudier les fondamentaux du Réseau tels que le modèle OSI, le protocole TCP/IP et l'addressage IP.
-                                Approfondissez vos connaissances à propos des different types de réseaux comme les LAN, WAN and MAN.
+                                Approfondissez vos connaissances à propos des different types de réseaux comme les LAN, WAN et MAN.
                                 Apprenez les protocoles de routage comme OSPF, BGP and EIGRP
-                                Accumulez du savoir-faire en installant et en configurant un réseau de petite taille,  avec routeurs and switches, au besoin au moyen de machines virtuelles et de logiciels comme Wireshark et Cisco Packet Tracer.
+                                Accumulez du savoir-faire en installant et en configurant un réseau de petite taille, avec routeurs et commutateurs, au besoin au moyen de machines virtuelles et de logiciels comme Wireshark et Cisco Packet Tracer.
                                 Restez à l'écoute des dernières actualités du secteur IT via la veille technologique et les flux RSS mais aussi via une participation active sur les forums spécialisés comme "zdnet.fr" ou "lafibre.info".
                             </p>
                         </div>
