--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Have fun creating your portfolio on this template!!! -->
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://drive.google.com/file/d/1rIobaOw_EdHVW7IbCJeJrsAqW_spokav/view?usp=sharing"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
@@ -311,7 +311,7 @@ Have fun creating your portfolio on this template!!! -->
               <br>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="https://drive.google.com/file/d/1SnAe_gTbvC15CwVg4mlJnEQQrdPANF2q/view?usp=drive_link"
+                  href="https://drive.google.com/file/d/1NBwzn7ieJSOrrPjqDD9qIsjOdKisUupz/view?usp=sharing"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
