--- a/autres_pages/page6.html
+++ b/autres_pages/page6.html
@@ -57,7 +57,7 @@ border-top: none;
 <h3>Présentation</h3>
 <ul>
 <li><a href="https://drive.google.com/file/d/1rIobaOw_EdHVW7IbCJeJrsAqW_spokav/view?usp=sharing" target="_blank" download>Fiche de réalisation professionnelle</a></li>
-<li><a href="https://drive.google.com/file/d/1tsoM7zbEVMGWqK6UWKqJBBAZvsEP86CH/view?usp=sharing" target="_blank" download>Schéma réseau</a></li>
+<li><a href="https://drive.google.com/file/d/1tsoM7zbEVMGWqK6UWKqJBBAZvsEP86CH/view?usp=drive_link" target="_blank" download>Schéma réseau</a></li>
 </ul>
 </div>
 <div>
@@ -101,7 +101,7 @@ border-top: none;
     <div>
     <h3>Environnement technologique & Rapport de stage</h3>
     <ul>
-    <li><a href="https://drive.google.com/file/d/1_WwCWYpQ9KCtEoBljEFluYv4N-0UYZ4b/view?usp=sharing" target="_blank" download>Environnement technologique</a></li>
+    <li><a href="https://drive.google.com/file/d/1f-JYWrSMMlKlsnMC7jM7Yt2vQyhQkVtA/view?usp=sharing" target="_blank" download>Environnement technologique</a></li>
     <li><a href="https://drive.google.com/file/d/1bmK1jkOKKCjs04Et4OHiStPYBVwp2vPD/view?usp=sharing" target="_blank" download>Rapport de stage</a></li>
     </ul>
        
