--- a/autres_pages/page6.html
+++ b/autres_pages/page6.html
@@ -75,8 +75,8 @@ border-top: none;
 <div>
 <h3>Présentation</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/1SnAe_gTbvC15CwVg4mlJnEQQrdPANF2q/view?usp=sharing" target="_blank" download>Fiche de réalisation professionnelle</a></li>
-<li><a href="https://drive.google.com/file/d/1SnAe_gTbvC15CwVg4mlJnEQQrdPANF2q/view?usp=sharing" target="_blank" download>Schéma réseau</a></li>
+<li><a href="https://drive.google.com/file/d/1NBwzn7ieJSOrrPjqDD9qIsjOdKisUupz/view?usp=sharing" target="_blank" download>Fiche de réalisation professionnelle</a></li>
+<li><a href="https://drive.google.com/file/d/1_cS7srxMd3eOdIKKigVVuX8GS4vvLPdW/view?usp=sharing" target="_blank" download>Schéma réseau</a></li>
 </ul>
 </div>
 <div>
@@ -84,7 +84,7 @@ border-top: none;
 <ul>
 <li><a href="documents/section2/subsectionB/document7.txt" target="_blank" download>Documentation technique</a></li>
 <li><a href="documents/section2/subsectionB/document8.docx" target="_blank" download>Fiche de test</a></li>
-<li><a href="documents/section1/subsectionB/document9.pdf" target="_blank" download>Scénarii d'incidents & de solutions</a></li>
+<li><a href="documents/section1/subsectionB/document9.pdf" target="_blank" download>Scénario d'incidents & de solutions</a></li>
 </ul>
 </div>
 </div>
