--- a/autres_pages/page6.html
+++ b/autres_pages/page6.html
@@ -83,8 +83,8 @@ border-top: none;
 <h3>Dossier technique</h3>
 <ul>
 <li><a href="documents/section2/subsectionB/document7.txt" target="_blank" download>Documentation technique</a></li>
+<li><a href="https://drive.google.com/file/d/1AUkNuYs06gbBZlm-gGDVv1_nke7la27N/view?usp=sharing" target="_blank" download>Scénario d'incidents & de solutions</a></li>
 <li><a href="documents/section2/subsectionB/document8.docx" target="_blank" download>Fiche de test</a></li>
-<li><a href="documents/section1/subsectionB/document9.pdf" target="_blank" download>Scénario d'incidents & de solutions</a></li>
 </ul>
 </div>
 </div>
