--- a/autres_pages/page6.html
+++ b/autres_pages/page6.html
@@ -82,9 +82,9 @@ border-top: none;
 <div>
 <h3>Dossier technique</h3>
 <ul>
-<li><a href="documents/section2/subsectionB/document7.txt" target="_blank" download>Documentation technique</a></li>
+<li><a href="https://drive.google.com/file/d/19ayp-f2ORtUzOxjvlKDSZAgQgtTh4iRB/view?usp=sharing" target="_blank" download>Documentation technique</a></li>
 <li><a href="https://drive.google.com/file/d/1AUkNuYs06gbBZlm-gGDVv1_nke7la27N/view?usp=sharing" target="_blank" download>Scénario d'incidents & de solutions</a></li>
-<li><a href="documents/section2/subsectionB/document8.docx" target="_blank" download>Fiche de test</a></li>
+<li><a href="https://drive.google.com/file/d/1Q6NhbwthhydiIM9UJ9tO4ZYsznEU7NtG/view?usp=sharing" target="_blank" download>Fiche de test</a></li>
 </ul>
 </div>
 </div>
