--- a/autres_pages/page6.html
+++ b/autres_pages/page6.html
@@ -56,7 +56,7 @@ border-top: none;
 <div>
 <h3>Présentation</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/1rIobaOw_EdHVW7IbCJeJrsAqW_spokav/view?usp=sharing" target="_blank" download>Fiche de réalisation professionnelle</a></li>
+<li><a href="https://drive.google.com/file/d/1RwOtfOutxl4xyin3dGwxexCnzgbzb3A8/view?usp=drive_link" target="_blank" download>Fiche de réalisation professionnelle</a></li>
 <li><a href="https://drive.google.com/file/d/1tsoM7zbEVMGWqK6UWKqJBBAZvsEP86CH/view?usp=drive_link" target="_blank" download>Schéma réseau</a></li>
 </ul>
 </div>
@@ -75,7 +75,7 @@ border-top: none;
 <div>
 <h3>Présentation</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/1NBwzn7ieJSOrrPjqDD9qIsjOdKisUupz/view?usp=sharing" target="_blank" download>Fiche de réalisation professionnelle</a></li>
+<li><a href="https://drive.google.com/file/d/1RwOtfOutxl4xyin3dGwxexCnzgbzb3A8/view?usp=sharing" target="_blank" download>Fiche de réalisation professionnelle</a></li>
 <li><a href="https://drive.google.com/file/d/1qp-YCoQ1XsotNfzINO9ZKurp50zr3jLg/view?usp=sharing" target="_blank" download>Schéma réseau</a></li>
 </ul>
 </div>
