--- a/autres_pages/page3.html
+++ b/autres_pages/page3.html
@@ -137,7 +137,7 @@ Have fun creating your portfolio on this template!!! -->
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="https://drive.google.com/file/d/1rIobaOw_EdHVW7IbCJeJrsAqW_spokav/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1RwOtfOutxl4xyin3dGwxexCnzgbzb3A8/view?usp=drive_link"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
@@ -183,7 +183,7 @@ Have fun creating your portfolio on this template!!! -->
               <br>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="https://drive.google.com/file/d/1NBwzn7ieJSOrrPjqDD9qIsjOdKisUupz/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1kc4hKtR_sKIyRFTAkTsAvsDD4JZAXPNX/view?usp=sharing"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
